# AMR-FV-Elliptic

./: .gitignore  CMakeLists.txt  README.md  compile.sh  configure.sh
doc/: AMRDesign.tex
etc/: clang_format.cmake
example/: CMakeLists.txt
example/AMRPoisson/: AMRPoisson.cpp  CMakeLists.txt  Helmoltz-Sinusoidal-rect.json  Poisson-Gaussian-rect.json  Poisson-MultiGaussian-L.json  Poisson-MultiGaussian-rect.json
example/AMRPoissonNoAnalyticSol/: AMRPoissonNoAnalyticSol.cpp  CMakeLists.txt  Poisson-Constant-L.json  Poisson-InvSum-rect.json  Poisson-Mollifier-rect.json
example/common/: CMakeLists.txt  DomainFactory.cpp  DomainFactory.h  FunctionFactory.cpp  FunctionFactory.h
example/common/lightJSON/: README.md  lightJSON.h
src/: CMakeLists.txt
src/AMRTools/: AMRMeshHierachy.cpp  AMRMeshHierachy.h  AMRMeshRefine.cpp  AMRMeshRefine.h  BRMeshRefine.cpp  BRMeshRefine.h  BaseIterator.h  CMakeLists.txt  DisjointBoxLayout.cpp  DisjointBoxLayout.h  LevelData.cpp  LevelData.h  LevelDataExpr.h  LevelGhostBoxes.cpp  LevelGhostBoxes.h  ProblemDomain.cpp  ProblemDomain.h  Utilities.cpp  Utilities.h  Wrapper_Silo.cpp  Wrapper_Silo.h
src/CFInterp/: CFInterpStencil.h  CFInterpStencilD2O1R2FT.cpp  CFInterpStencilD2O1R4FT.cpp  CFInterpStencilD2O2R2FT.cpp  CFInterpStencilD2O2R4FT.cpp  CFInterpStencilD2O4R2FT.cpp  CFInterpStencilD2O4R2TF.cpp  CFInterpStencilD2O4R2TT.cpp  CFInterpStencilD2O4R4FT.cpp  CFInterpStencilD2O4R4TF.cpp  CFInterpStencilD2O4R4TT.cpp  CFInterpStencilD2O5R2TF.cpp  CMakeLists.txt
src/Core/: BinaryPolynomial.h  Box.h  CMakeLists.txt  Config.cpp  Config.h  Curve.cpp  Curve.h  Interval.h  LinearizationHelper.h  MPI.h  MultivariatePolynomial.h  ParallelDataBase.h  Polynomial.h  Profile.cpp  Profile.h  RowSparse.cpp  RowSparse.h  SimplicialComplex.cpp  SimplicialComplex.h  Tensor.h  TensorExpr.h  TensorSlice.h  Vec.h  VecCompare.h  Wrapper_OpenMP.h  configure.h  configure.h.in  numlib.h  static_for.h  type_traits.h
src/FiniteDiff/: AMRIntergridOp.cpp  AMRIntergridOp.h  CMakeLists.txt  FuncFiller.cpp  FuncFiller.h  GhostFiller.cpp  GhostFiller.h  LevelOp.h  LevelOp_Curl.cpp  LevelOp_Divergence.cpp  LevelOp_Filters.cpp  LevelOp_Gradient.cpp  LevelOp_Laplacian.cpp  LevelOp_Magnitude.cpp  LevelOp_Norm.cpp  LevelOp_Smoothers.cpp  LevelOp_Tag.cpp  MGIntergrid.cpp  MGIntergrid.h
src/InterfaceTracking/: CMakeLists.txt  ComputeError.h  DIRK.h  ERK.h  EdgeSwapper.cpp  EdgeSwapper.h  EnergyFunctor.h  LinearMARS3D.cpp  LinearMARS3D.h  MARS.cpp  MARS.h  MARS2D.cpp  MARS2D.h  MARS2DIMV.cpp  MARS2DIMV.h  Polygon.cpp  Polygon.h  PolynomialSurface.h  RKButcher.cpp  RKButcher.h  TestExample.h  TimeIntegrator.h  VectorFunction.h  VelocityField.h  VertexAdjustor.cpp  VertexAdjustor.h  XorArea.cpp
src/SpatialOp/: AMRMGLevelOp.cpp  AMRMGLevelOp.h  AMRMultigrid.cpp  AMRMultigrid.h  CMakeLists.txt  HelmoltzJacobiSmoother.cpp  HelmoltzJacobiSmoother.h  LinearSolver.cpp  LinearSolver.h  PLG.cpp  PLG.h  Petsc.h
test/: CMakeLists.txt
test/FieldTest/: CMakeLists.txt  testBR.cpp  testPoissonCell.cpp
test/UnitTest/: CMakeLists.txt  PerformUnitTests.cpp  TestBRMeshRefine.h  TestCellOperators.h  TestComputeNorm.h  TestLevelData.h  TestWrapperSilo.h  catch_amalgamated.cpp  catch_amalgamated.hpp
